unified_tests/functions/generic_function_used_as_value/expect/build.text.stderr
lib.copp:6:12: error: generic function 'identity' cannot be used as a value
      return identity
             ^
